--- a/osgen/templates/func_table.asm.jinja
+++ b/osgen/templates/func_table.asm.jinja
@@ -1,4 +1,5 @@
-.IMPORT {%- for call in os_calls %} {{ call.implementation}} 
+.IMPORT 
+{%- for call in os_calls %} {{ call.implementation}} 
 {%- if !call.is_last -%}, {%- endif -%}
 {%- endfor %}
 .EXPORT os_func_table
