add function description to osgen output

--- a/osgen/templates/import.inc.jinja
+++ b/osgen/templates/import.inc.jinja
@@ -1,4 +1,7 @@
-.IMPORT 
-{%- for call in os_calls %} {{ call.exported_name }} 
-{%- if !call.is_last -%}, {%- endif -%}
-{%- endfor -%}
+{%- for call in os_calls -%} 
+{%- for docs in call.docs -%}
+; {{ docs }}
+{% endfor -%}
+.IMPORT {{ call.exported_name }} 
+
+{% endfor -%}
